--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-spring.application.name=rabbitmq-HA-load-balancing-t3
+spring.application.name=odradjen_neki_feature
+spring.application.name.fix1=neko_odbio_PR_fix_v2
