--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=odradjen_neki_feature
 spring.application.name.fix1=neko_odbio_PR_fix_v2
 na novom branchu !!!
+drugi commit
